# rs_isaac_uav_sim

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  README.md  TODO.md  docker-compose.yml  package.xml  pyrightconfig.json  setup.cfg  setup.py
assets/basic_quadrotor/: basic_quadrotor.usda
assets/basic_quadrotor/payloads/: base.usda  instances.usda  materials.usda  physics.usda  robot.usda  visual_materials.usda
assets/iris_quadrotor/: iris_quadrotor.usda
assets/iris_quadrotor/payloads/: physics.usda
config/: default.yaml  px4_iris.yaml
docs/: _config.yml  architecture.md  configuration.md  index.md  quickstart.md
isaac_run/: bench_async.py  bench_render.py  bench_render2.py  bench_render3.py  bench_render4.py  bench_render5.py  scene_basic_quadrotor.py  scene_mavlink_sim.py
launch/: px4_sitl.launch.py  scene_mavlink_sim.py
rs_isaac_uav_sim/: __init__.py  mocap_rate_limiter.py
rs_isaac_uav_sim/sim/: config.py  dynamics.py  mavlink_backend.py  sensors.py  state.py  vehicle.py
scripts/: live_flight_demo.py  mocap_rate_limiter
test/: test_copyright.py  test_flake8.py  test_pep257.py
test/integration/: test_mavlink_scenarios.py  test_px4_sitl_takeoff.py
test/lint/: test_copyright.py  test_flake8.py  test_pep257.py  test_pyright.py
test/mocks/: gcs_mavlink_client.py  mock_mavlink_autopilot.py
test/unit/: test_state_rotations.py
