<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rs_isaac_uav_sim</name>
  <version>0.1.0</version>
  <description>UAV simulation with NVIDIA Isaac Sim 6.0 and ROS2</description>

  <maintainer email="damien@robotsix.net">Damien SIX</maintainer>
  <author email="damien@robotsix.net">Damien SIX</author>

  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
